# mcp_streamable_http

./: .gitignore  README.md  main.py  pyproject.toml  sample_env_file
streamable_http_server/1-stateless-streamable/: README.md  __init__.py  main.py  server1.py  server2.py
streamable_http_server/2-google-oauth-simple-server/: README.md  server.py
universal_client/1-google-adk-gemini-mcp-client/: .gitignore  README.md  agent.py  client.py  cmd.py  theailanguage_config.json  utilities.py
universal_client/2-adk-web-client/: README.md  agent.py
universal_client/3-google-oauth-simple-client/: README.md  client.py
